<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.yulagarces.citobot.ui.screening.Tamizaje1Fragment">

    <LinearLayout
        android:id="@+id/t1_contenedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/t1_tamizaje_ico"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/icono_tamizaje"/>
        <TextView
            android:id="@+id/t1_tamizaje_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t1_titulo"
            android:gravity="center"
            android:padding="10dp"
            android:textAppearance="@style/textoAzulNegritaXL"/>

        <TextView
            android:id="@+id/t1_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:background="@drawable/fondo_gris_azulado"
            android:textAppearance="@style/textoVerdeNegritaL"/>

        <LinearLayout
            android:id="@+id/t1_contenedor_pasos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:padding="25dp"
            android:orientation="vertical"
            android:background="@drawable/fondo_blanco">

            <TextView
                android:id="@+id/t1_recordar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t1_recordar"
                android:textAppearance="@style/textoVerdeM"/>

            <LinearLayout
                android:id="@+id/t1_contenedor_paso1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/t1_paso1n_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t1_paso1_n"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/textoVerdeNegritaL"/>
                <TextView
                    android:id="@+id/t1_paso1_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/t1_paso1_t"
                    android:textAppearance="@style/textoAzulOscuroL"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/t1_contenedor_paso2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/t1_paso2n_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t1_paso2_n"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/textoVerdeNegritaL"/>
                <TextView
                    android:id="@+id/t1_paso2_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/t1_paso2_t"
                    android:textAppearance="@style/textoAzulOscuroL"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/t1_contenedor_paso3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/t1_paso3n_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t1_paso3_n"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/textoVerdeNegritaL"/>
                <TextView
                    android:id="@+id/t1_paso3_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/t1_paso3_t"
                    android:textAppearance="@style/textoAzulOscuroL"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/t1_contenedor_paso4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/t1_paso4n_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t1_paso4_n"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/textoVerdeNegritaL"/>
                <TextView
                    android:id="@+id/t1_paso4_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/t1_paso4_t"
                    android:textAppearance="@style/textoAzulOscuroL"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/t1_contenedor_imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:padding="25dp"
            android:orientation="vertical"
            android:background="@drawable/fondo_blanco">

            <TextView
                android:id="@+id/t1_ilustracion_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t1_ilustracion"
                android:textAppearance="@style/textoVerdeM"/>

            <ImageView
                android:id="@+id/t1_ilustracion"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:padding="3dp"
                android:src="@drawable/cuello_uterino"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/t1_iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/t1_iniciar"
            android:textAppearance="@style/textoBlancoL"
            android:background="@drawable/btn_primario"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>