<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="stateHidden|adjustResize">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:padding="20dp"
        tools:context=".IniciarSesion">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/nombre_solo"
            android:contentDescription="@string/all" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30sp"
            android:src="@mipmap/ic_logo"
            android:contentDescription="@string/all" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30sp"
            android:textAppearance="@style/textoAzulNegritaXL"
            android:text="@string/user"/>
        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/textoAzulNegritaXL"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textAppearance="@style/textoBlancoNegritaL"
            android:background="@drawable/btn_primario_activo"
            android:text="@string/login"/>
        <TextView
            android:id="@+id/tv_forgetPass"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/textoAzulNegritaXL"
            android:text="@string/forget_pass"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>